--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.1.10",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-date-picker": "^8.0.6",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.2.0",
     "url-loader": "^4.1.1",
     "web-vitals": "^0.2.4"
   },
